# local-meeting-recorder

./: .gitignore  CLAUDE.md  PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  spec.md  vite.config.ts
scripts/: fetch-ollama.sh  reset-setup.sh
src/: App.css  App.tsx  EditorWindow.css  EditorWindow.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  download.rs  lib.rs  summarize.rs  transcribe.rs
src/test/: setup.ts  utils.test.ts
