[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (Phase 2)
screencapturekit = "1.5"
cpal = "0.17"
hound = "3.5"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
parking_lot = "0.12"
chrono = "0.4"
dirs = "5"

# Model downloads (Phase 1.5)
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Transcription (Phase 3)
whisper-rs = "0.12"

# Summarization (Phase 5)
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.6.0", features = ["metal"] }

